# ClaudeUsageTrackEr

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/claude_tracker/: cli.py  collector.py  db.py  git_activity.py  server.py
src/claude_tracker/templates/: index.html
systemd/: claude-tracker.service  claude-tracker.timer
tests/: test_collector.py
