[project]
name = "claude-tracker"
version = "0.1.0"
description = "Track and visualize Claude Code CLI usage from ~/.claude session data"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "click>=8.0",
]

[project.scripts]
claude-tracker = "claude_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_tracker"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
